# mltt

./: .gitignore  .stylish-haskell.yaml  Infer.hs  Makefile  README.md  Types.hs  mltt.cabal
executable/: MLTT.hs  Main.hs
