name:                     mltt
author:                   Sebastian Conybeare
version:                  0.0.1
build-type:               Simple
cabal-version:            >= 1.10
category:                 Utility
copyright:                2016 Sebastian Conybeare <sebmathguy@gmail.com>
extra-source-files:       README.md
maintainer:               sebmathguy@gmail.com
-- FIXME: add license file etc.
synopsis:                 An implementation of Martin-Löf Type Theory in Haskell.
description:              An implementation of Martin-Löf Type Theory in Haskell.

library
    build-depends:        base                  == 4.*

                        -- Data types
                        , containers            == 0.5.*
                        , unordered-containers  == 0.2.*

                        -- Strings
                        , text                  == 1.2.*

                        -- Monad transformers
                        , mtl                   == 2.2.*
                        , transformers          == 0.4.*

                        -- Lens
                        , lens                  == 4.13.*

                        -- Pipes
                        , pipes                 == 4.1.*

                        -- Parsing
                        , trifecta              == 1.5.*
                        , parsers               == 0.12.*

                        -- Exceptions
                        , exceptions            == 0.8.*

                        -- Miscellaneous
                        , ansi-wl-pprint        == 0.6.*
                        , data-fix              == 0.0.*
                        , here                  == 1.2.*

    default-language:     Haskell2010
    exposed-modules:      MLTT
                          MLTT.Types
                          MLTT.Infer
    ghc-options:          -Wall
                          -threaded
                          -fno-warn-type-defaults
                          -fno-warn-unused-imports
                          -fno-warn-unused-do-bind
    ghc-prof-options:     -auto-all -prof
    hs-source-dirs:       library
    default-extensions:   OverloadedStrings

executable mltt
    build-depends:        base == 4.*
                        , mltt
    default-language:     Haskell2010
    ghc-options:          -threaded
    ghc-prof-options:     -auto-all -prof
    hs-source-dirs:       executable
    main-is:              Main.hs
